--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site Settings
 remote_theme: mmistakes/minimal-mistakes
 
-minimal_mistakes_skin: default
+minimal_mistakes_skin: orchid
 
 locale: ko-KR
 
