--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chatoo2412.github.io",
-  "description": "chatoo's development blog.",
+  "description": "chatoo's web development blog.",
   "author": "chatoo2412",
   "homepage": "https://chatoo2412.github.io/",
   "scripts": {
