--- a/_config.yml
+++ b/_config.yml
@@ -140,3 +140,9 @@ defaults:
       comments: false # TODO: Enable.
       share: true
       related: true
+  - scope:
+      path: ""
+      type: pages
+    values:
+      author_profile: true
+      excerpt: 웹기술과 개발 프로세스에 대한 생각을 공유합니다.
