seo: improve Facebook-related meta tags

--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ naver_site_verification: 222e2a1c028a3cb2b03a0303e74687f323bed21c
 twitter:
   username: chatoo2412
 facebook:
-  username: chatoo2412
+  app_id: 313014615948274
 og_image: /assets/images/cover.png
 social:
   type: Person
