--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -1,6 +1,6 @@
 ko: &DEFAULT_KO
-  pagination_previous: "&lt; Older Post"
-  pagination_next: "Newer Post &gt;"
+  pagination_previous: '&lt; Older Post'
+  pagination_next: 'Newer Post &gt;'
   tags_label: Tags
   categories_label: Categories
   date_label: Updated at
