--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,13 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:10.12.0
+      - image: circleci/node:10.13.0 # TODO: Use nvm. https://discuss.circleci.com/t/fallback-to-nvmrc-if-node-version-not-specified/162
     steps:
       - checkout
 
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
-      - run: npm install
+      - run: npm ci
       - save_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
