theme: exclude files

--- a/_config.yml
+++ b/_config.yml
@@ -77,13 +77,13 @@ footer:
 include:
   - /_pages
 exclude:
+  # - /LICENSE
+  - /README.md
   - /Gemfile
   - /Gemfile.lock
-  - /node_modules
   - /package.json
   - /package-lock.json
-  - /README.md
-  - '*.code-workspace'
+  - /node_modules
 
 # Conversion and Markdown Processing
 kramdown:
