--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,5 @@ jobs:
             - ./node_modules
 
       - run: npm test
+
+      - run: curl http://www.google.com/ping?sitemap=https://chatoo2412.github.io/sitemap.xml
