theme: update location

--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ author:
   name: Wooram Jun
   avatar: /assets/images/avatar.jpg
   bio: 웹 개발자입니다. UX와 프론트엔드, 개발 프로세스에 관심이 많습니다.
-  location: Seoul, Korea
+  location: Bundang, Korea
   links:
     - label: GitHub
       icon: fab fa-fw fa-github
